[Forms] Step mismatched value should be editable in multiple field time UI. https://bugs.webkit.org/show_bug.cgi?id=94664

Reviewed by Kent Tamura.

Source/WebCore:

This patch changes layout method of multiple field time input UI to
check value of the "input" element in addition to step and range to
allow users to change step mismatched value from UI.

Tests: fast/forms/time-multiple-fields/time-multiple-fields-change-layout-by-value.html: for changing layout by value change.
This patch also adds new test case into fast/forms/time-multiple-fields/time-multiple-fields-appearance-basic.html.

* html/TimeInputType.cpp:
(WebCore::TimeInputType::createShadowSubtree): Changed for DateTimeEditElement::create signature change.
(WebCore::TimeInputType::minOrMaxAttributeChanged): Changed to call updateInnerTextValue instead of removed updateEditElementLayout()
(WebCore::TimeInputType::stepAttributeChanged): ditto.
(WebCore::TimeInputType::updateInnerTextValue): Changed for DateTimeEditElement::setValueAsDate() and setEmptyValue() signature change.
* html/TimeInputType.h:
(TimeInputType): Removed updateEditElementLayout() declaration.
* html/shadow/DateTimeEditElement.cpp:
(DateTimeEditBuilder):
(WebCore::DateTimeEditBuilder::DateTimeEditBuilder): Added a new parameter date value to constructor to use it for layout decision.
(WebCore::DateTimeEditBuilder::needMillisecondField): Changed to check date value too.
(WebCore::DateTimeEditBuilder::needMinuteField): ditto
(WebCore::DateTimeEditBuilder::needSecondField): ditto
(WebCore::DateTimeEditBuilder::shouldMillisecondFieldReadOnly): ditto
(WebCore::DateTimeEditBuilder::shouldMinuteFieldReadOnly): ditto
(WebCore::DateTimeEditBuilder::shouldSecondFieldReadOnly): ditto
(WebCore::DateTimeEditElement::create): Changed for removing stepRange parameter.
(WebCore::DateTimeEditElement::layout): Changed to keep focus field for new layout.
(WebCore::DateTimeEditElement::setValueAsDate): Changed to call layout() with StepRange and date value.
(WebCore::DateTimeEditElement::setEmptyValue): ditto
* html/shadow/DateTimeEditElement.h:
(DateTimeEditElement):

LayoutTests:

This patch adds new test case for step mismatched value case and
updates test cases to avoid step mismatched value, and a test file
for dynamic layout change casued by input element's value change.

Note: We need to do rebaseline for Chromium-Mac and Chromium-Win.

* fast/forms/time-multiple-fields/time-multiple-fields-appearance-basic-expected.html: Updated for new test case and behavior change.
* fast/forms/time-multiple-fields/time-multiple-fields-appearance-basic.html: ditto
* fast/forms/time-multiple-fields/time-multiple-fields-appearance-disabled-readonly.html: Updated for behavior change.
* fast/forms/time-multiple-fields/time-multiple-fields-appearance-pseudo-elements.html: ditto
* fast/forms/time-multiple-fields/time-multiple-fields-appearance-style.html: ditto
* fast/forms/time-multiple-fields/time-multiple-fields-change-layout-by-value-expected.txt: Added.
* fast/forms/time-multiple-fields/time-multiple-fields-change-layout-by-value.html: Added for dynamic layout change from value change.
* platform/chromium-linux/fast/forms/time-multiple-fields/time-multiple-fields-appearance-disabled-readonly-expected.png: ditto
* platform/chromium-linux/fast/forms/time-multiple-fields/time-multiple-fields-appearance-disabled-readonly-expected.txt: ditto
* platform/chromium-linux/fast/forms/time-multiple-fields/time-multiple-fields-appearance-pseudo-classes-expected.png: ditto
* platform/chromium-linux/fast/forms/time-multiple-fields/time-multiple-fields-appearance-pseudo-classes-expected.txt: ditto

Canonical link: https://commits.webkit.org/112753@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126534 268f45cc-cd09-0410-ab3c-d52691b4dbfc